--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
+	<ItemGroup>
+		<PropertyPageSchema Include="$(MSBuildThisFileDirectory)Rules/ProjectItemsSchema.xaml">
+			<Context>File;BrowseObject;</Context>
+		</PropertyPageSchema>
+		<PropertyPageSchema Include="$(MSBuildThisFileDirectory)Rules/SharedImage.xaml">
+			<Context>File;BrowseObject;</Context>
+		</PropertyPageSchema>
+		<PropertyPageSchema Include="$(MSBuildThisFileDirectory)Rules/SharedFont.xaml">
+			<Context>File;BrowseObject;</Context>
+		</PropertyPageSchema>
+	</ItemGroup>
+	
 	<PropertyGroup>
 		<CleanDependsOn>
 			$(CleanDependsOn);
