--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,32 +20,33 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.100
-      - name: Build and Pack - Release
-        if: github.event_name == 'release'
+          dotnet-version: '5.0.x'
+      
+      - name: Build
+        shell: pwsh
         run: |
-          arrTag=(${GITHUB_REF//\// })
-          VERSION="${arrTag[2]}"
-          VERSION="${VERSION//v}"
-          mkdir ./output
-          mkdir ./artifacts
-          dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-      - name: Build and Pack - CI
-        if: github.event_name != 'release'
-        run: |
-          VERSION=$NUPKG_MAJOR-ci$GITHUB_RUN_ID
-          mkdir ./output
-          mkdir ./artifacts
-          dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
+          $VERSION="$env:NUPKG_MAJOR-ci$env:GITHUB_RUN_ID"
+          if ($env:GITHUB_EVENT_NAME -eq "release") {
+            $VERSION = $env:GITHUB_REF.Substring($env:GITHUB_REF.LastIndexOf('/') + 1)
+          }
+          echo "::set-output name=pkgverci::$VERSION"
+          echo "PACKAGE VERSION: $VERSION"
+
+          New-Item -ItemType Directory -Force -Path .\artifacts
+          dotnet pack --output ./artifacts --configuration Release -p:PackageVersion=$VERSION ./Resizetizer.NT/Resizetizer.NT.csproj
+          $pfxPath = Join-Path -Path $pwd -ChildPath "codesigncert.pfx"
+          [IO.File]::WriteAllBytes("$pfxPath", [System.Convert]::FromBase64String($env:CODESIGN_PFX))
+          nuget sign .\artifacts\*.nupkg -CertificatePath $pfxPath -Timestamper http://timestamp.entrust.net/TSS/RFC3161sha2TS
+      
       - name: Run Tests
         run: dotnet test --configuration Release ./Resizetizer.NT.Tests/Resizetizer.NT.Tests.csproj
-      - name: Upload Artifacts
+
+      - name: Artifacts
         uses: actions/upload-artifact@v1
         with:
           name: NuGet
           path: ./artifacts
+      
 
     publish:
       name: Publish
@@ -60,15 +61,7 @@ jobs:
         - name: Setup .NET Core
           uses: actions/setup-dotnet@v1
           with:
-            dotnet-version: 3.1.100
-        - name: Setup NuGet
-          uses: nuget/setup-nuget@v1
-          with:
-            nuget-api-key: ${{ secrets.NUGET_API_KEY }}
-            nuget-version: 'latest'
+            dotnet-version: '5.0.x'
         - name: Push NuGet
           run: |
-            nuget sources add -Name "GPR" -Source "https://nuget.pkg.github.com/Redth/index.json" -UserName Redth -Password ${{ secrets.GITHUB_TOKEN }}
-            nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source "GPR"
-            nuget push NuGet\*.nupkg --source "GPR" --skip-duplicate
-            nuget push NuGet\*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_API_KEY }} --skip-duplicate
+            dotnet nuget push NuGet\*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_API_KEY }}
