Fix local nuget feed for sample

--- a/SampleApp/NuGet.config
+++ b/SampleApp/NuGet.config
@@ -5,6 +5,6 @@
     </config>
     <packageSources>
         <!-- Add this repository to the list of available repositories -->
-        <add key="Resizetizer" value="./output" />
+        <add key="Resizetizer" value="../artifacts" />
     </packageSources>
 </configuration>
