--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       name: Build
       env:
         NUPKG_MAJOR: 0.3
+        CODESIGN_PFX: ${{ secrets.CODESIGN_PFX }}
       runs-on: macos-latest
       steps:
       - name: Checkout
