--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       env:
         NUPKG_MAJOR: 0.3
         CODESIGN_PFX: ${{ secrets.CODESIGN_PFX }}
-      runs-on: macos-latest
+      runs-on: windows-latest
       steps:
       - name: Checkout
         uses: actions/checkout@v2
