fixes: Issues #82 Value cannot be null

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -300,7 +300,9 @@
 		Outputs="$(IntermediateOutputPath)resizetizer.stamp"
 		AfterTargets="$(ResizetizeAfterTargets)"
 		BeforeTargets="$(ResizetizeBeforeTargets)"
-		DependsOnTargets="$(ResizetizeDependsOnTargets)">
+		DependsOnTargets="$(ResizetizeDependsOnTargets)"
+		Condition="'@(SharedImage)' != ''"
+		>
 
 		<DetectInvalidResourceOutputFilenamesTask
 			Items="@(SharedImage)"
