--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       name: Build
       env:
         NUPKG_MAJOR: 0.3
+        BASE: 1
         # CODESIGN_PFX: ${{ secrets.CODESIGN_PFX }}
       runs-on: windows-latest
       steps:
