--- a/Resizetizer.NT/Resizetizer.NT.csproj
+++ b/Resizetizer.NT/Resizetizer.NT.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>11.0</LangVersion>
 
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
@@ -25,7 +25,7 @@
 		<DevelopmentDependency>true</DevelopmentDependency>
 	</PropertyGroup>
 
-	<ItemGroup>
+	<!--<ItemGroup>
 		<_ItemToPack Include="$(PkgSystem_Memory)\lib\netstandard2.0\System.Memory.dll" />
 		<_ItemToPack Include="$(PkgSystem_Buffers)\lib\netstandard2.0\System.Buffers.dll" />
 		<_ItemToPack Include="$(PkgSystem_Numerics_Vectors)\lib\netstandard2.0\System.Numerics.Vectors.dll" />
@@ -48,7 +48,7 @@
 		<_ItemToPack Include="$(PkgHarfBuzzSharp)\runtimes\win-x64\native\libHarfBuzzSharp.dll" SubDir="x64" />
 		<_ItemToPack Include="$(PkgSvg2VectorDrawable_Net)\lib\netstandard2.0\Svg2VectorDrawable.Net.dll" />
 		<_ItemToPack Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\Newtonsoft.Json.dll" />
-	</ItemGroup>
+	</ItemGroup>-->
 
 	<ItemGroup>
 		<None Include="$(TargetPath)" Visible="False" Pack="True" PackagePath="buildTransitive;build" />
@@ -61,24 +61,24 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fizzler" Version="1.2.0" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="HarfBuzzSharp" Version="2.6.1.7" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Build.Framework" Version="16.7.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.7.0" PrivateAssets="all" />
-		<PackageReference Include="SkiaSharp" Version="2.80.2" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.80.2" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Svg.Skia" Version="0.4.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Svg.Custom" Version="0.4.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Fizzler" Version="1.3.0" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="HarfBuzzSharp" Version="2.8.2.5" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Build.Framework" Version="17.7.2" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.7.2" PrivateAssets="all" />
+		<PackageReference Include="SkiaSharp" Version="2.88.5" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.5" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Svg.Skia" Version="1.0.0.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Svg.Custom" Version="1.0.0.1" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="Svg.Picture" Version="0.4.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Memory" Version="4.5.4" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Memory" Version="4.5.5" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.Buffers" Version="4.5.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.IO.UnmanagedMemoryStream" Version="4.3.0" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.Numerics.Vectors" Version="4.5.0" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Drawing.Common" Version="4.7.0" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Drawing.Common" Version="7.0.0" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.ObjectModel" Version="4.3.0" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Svg2VectorDrawable.Net" Version="0.1.0" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Svg2VectorDrawable.Net" Version="0.3.0" GeneratePathProperty="true" PrivateAssets="all" />
 	</ItemGroup>
 
 </Project>
