--- a/Resizetizer.NT/Resizetizer.NT.csproj
+++ b/Resizetizer.NT/Resizetizer.NT.csproj
@@ -6,12 +6,12 @@
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <PackageId>Resizetizer.NT</PackageId>
-    <Title>An Jpeg output support of Resizetizer NT for Xamarin Image Assets</Title>
+    <PackageId>Resizetizer.NT.Updated</PackageId>
+    <Title>Updated Resizetizer NT</Title>
     <Version>0.99.0</Version>
-    <Authors>Redth, Dmytro Bondarenko</Authors>
+    <Authors>Dmytro Bondarenko</Authors>
     <Owners>Redth</Owners>
-    <summary>Easily and automatically resize your source image assets as part of your build process.</summary>
+    <summary>Explore the repository; the enhancements might make you happy</summary>
     <PackageDescription>
       Easily and automatically resize your source image assets as part of your build process.
     </PackageDescription>
