--- a/SampleApp/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp/SampleApp.csproj
@@ -29,12 +29,13 @@
 		<SharedImage Include="large1.png" BaseSize="44"  />
 		<SharedImage Include="large2.jpg" BaseSize="44"  />-->
 
-		<SharedImage Include="fullscreen_landscape_best_q.png" BaseSize="360,640" Format="Jpeg,10" />
+    <!--resize large png image to jpeg format with 10% quality-->
+		<SharedImage Include="fullscreen_landscape_best_q.png" BaseSize="640,640" Format="Jpeg,10" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Update="Xamarin.Essentials" Version="1.8.0" />
-	  <PackageReference Update="Xamarin.Forms" Version="5.0.0.2612" />
+	  <PackageReference Include="Xamarin.Essentials" Version="1.8.0" />
+	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2612" />
 	</ItemGroup>
 
 	<!--<ItemGroup Condition="'$(_ResizetizerIsAndroidApp)' == 'True'">
