--- a/SampleApp/SampleApp.UWP/SampleApp.UWP.csproj
+++ b/SampleApp/SampleApp.UWP/SampleApp.UWP.csproj
@@ -144,6 +144,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>5.0.0.2612</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SampleApp\SampleApp.csproj">
