--- a/Resizetizer.NT/Resizetizer.NT.csproj
+++ b/Resizetizer.NT/Resizetizer.NT.csproj
@@ -6,8 +6,8 @@
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <PackageId>Resizetizer.NT.Updated</PackageId>
-    <Title>Updated Resizetizer NT</Title>
+    <PackageId>Resizetizer.NT</PackageId>
+    <Title>Refreshed Resizetizer NT</Title>
     <Version>0.99.0</Version>
     <Authors>Dmytro Bondarenko</Authors>
     <Owners>Redth</Owners>
@@ -23,6 +23,8 @@
     <IncludeBuildOutput>False</IncludeBuildOutput>
     <NoWarn>NU5100;NU5128</NoWarn>
     <DevelopmentDependency>true</DevelopmentDependency>
+    <AssemblyName>Resizetizer.NT</AssemblyName>
+    <RootNamespace>Resizetizer.NT</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,12 +42,15 @@
     <_ItemToPack Include="$(PkgFizzler)\lib\netstandard2.0\Fizzler.dll" />
     <_ItemToPack Include="$(PkgSystem_IO_UnmanagedMemoryStream)\lib\netstandard1.3\System.IO.UnmanagedMemoryStream.dll" />
     <_ItemToPack Include="$(PkgShimSkiaSharp)\lib\netstandard2.0\ShimSkiaSharp.dll" />
-    <_ItemToPack Include="$(PkgSkiaSharp)\lib\netstandard2.0\SkiaSharp.dll" />
+    <_ItemToPack Include="$(PkgSkiaSharp)\lib\net462\SkiaSharp.dll" />
+    <_ItemToPack Include="$(PkgSkiaSharp)\lib\net462\SkiaSharp.pdb" />
     <_ItemToPack Include="$(PkgSkiaSharp_NativeAssets_macOS)\runtimes\osx\native\libSkiaSharp.dylib" />
     <_ItemToPack Include="$(PkgSkiaSharp_NativeAssets_Win32)\runtimes\win-x86\native\libSkiaSharp.dll" SubDir="x86" />
     <_ItemToPack Include="$(PkgSkiaSharp_NativeAssets_Win32)\runtimes\win-x64\native\libSkiaSharp.dll" SubDir="x64" />
     <_ItemToPack Include="$(PkgSkiaSharp_HarfBuzz)\lib\net462\SkiaSharp.HarfBuzz.dll" />
-    <_ItemToPack Include="$(PkgHarfBuzzSharp)\lib\netstandard2.0\HarfBuzzSharp.dll" />
+    <_ItemToPack Include="$(PkgSkiaSharp_HarfBuzz)\lib\net462\SkiaSharp.HarfBuzz.pdb" />
+    <_ItemToPack Include="$(PkgHarfBuzzSharp)\lib\net462\HarfBuzzSharp.dll" />
+    <_ItemToPack Include="$(PkgHarfBuzzSharp)\lib\net462\HarfBuzzSharp.pdb" />
     <_ItemToPack Include="$(PkgHarfBuzzSharp_NativeAssets_macOS)\runtimes\osx\native\libHarfBuzzSharp.dylib" />
     <_ItemToPack Include="$(PkgHarfBuzzSharp_NativeAssets_Win32)\runtimes\win-x86\native\libHarfBuzzSharp.dll" SubDir="x86" />
     <_ItemToPack Include="$(PkgHarfBuzzSharp_NativeAssets_Win32)\runtimes\win-x64\native\libHarfBuzzSharp.dll" SubDir="x64" />
@@ -54,39 +59,14 @@
   </ItemGroup>
 
 
-  <!--<ItemGroup>
-		<_ItemToPack Include="$(PkgSystem_Memory)\lib\netstandard2.0\System.Memory.dll" />
-		<_ItemToPack Include="$(PkgSystem_Buffers)\lib\netstandard2.0\System.Buffers.dll" />
-		<_ItemToPack Include="$(PkgSystem_Numerics_Vectors)\lib\netstandard2.0\System.Numerics.Vectors.dll" />
-		<_ItemToPack Include="$(PkgSystem_Runtime_CompilerServices_Unsafe)\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll" />
-		<_ItemToPack Include="$(PkgSystem_Drawing_Common)\lib\netstandard2.0\System.Drawing.Common.dll" />
-		<_ItemToPack Include="$(PkgSystem_ObjectModel)\lib\netstandard1.3\System.ObjectModel.dll" />
-		<_ItemToPack Include="$(PkgSvg_Custom)\lib\net461\Svg.Custom.dll" />
-		<_ItemToPack Include="$(PkgSvg_Picture)\lib\net461\Svg.Picture.dll" />
-		<_ItemToPack Include="$(PkgSvg_Skia)\lib\net461\Svg.Skia.dll" />
-		<_ItemToPack Include="$(PkgFizzler)\lib\netstandard2.0\Fizzler.dll" />
-		<_ItemToPack Include="$(PkgSystem_IO_UnmanagedMemoryStream)\lib\netstandard1.3\System.IO.UnmanagedMemoryStream.dll" />
-		<_ItemToPack Include="$(PkgSkiaSharp)\lib\net462\SkiaSharp.dll" />
-		<_ItemToPack Include="$(PkgSkiaSharp)\runtimes\osx\native\libSkiaSharp.dylib" />
-		<_ItemToPack Include="$(PkgSkiaSharp)\runtimes\win-x86\native\libSkiaSharp.dll" SubDir="x86" />
-		<_ItemToPack Include="$(PkgSkiaSharp)\runtimes\win-x64\native\libSkiaSharp.dll" SubDir="x64" />
-		<_ItemToPack Include="$(PkgSkiaSharp_HarfBuzz)\lib\net462\SkiaSharp.HarfBuzz.dll" />
-		<_ItemToPack Include="$(PkgHarfBuzzSharp)\lib\net462\HarfBuzzSharp.dll" />
-		<_ItemToPack Include="$(PkgHarfBuzzSharp)\runtimes\osx\native\libHarfBuzzSharp.dylib" />
-		<_ItemToPack Include="$(PkgHarfBuzzSharp)\runtimes\win-x86\native\libHarfBuzzSharp.dll" SubDir="x86" />
-		<_ItemToPack Include="$(PkgHarfBuzzSharp)\runtimes\win-x64\native\libHarfBuzzSharp.dll" SubDir="x64" />
-		<_ItemToPack Include="$(PkgSvg2VectorDrawable_Net)\lib\netstandard2.0\Svg2VectorDrawable.Net.dll" />
-		<_ItemToPack Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\Newtonsoft.Json.dll" />
-	</ItemGroup>-->
-
   <ItemGroup>
-    <None Include="$(TargetPath)" Visible="False" Pack="True" PackagePath="buildTransitive;build" />
-    <None Include="@(_ItemToPack)" Visible="False" Pack="True" PackagePath="buildTransitive\%(SubDir);build\%(SubDir)" CopyToOutputDirectory="PreserveNewest" />
-    <None Include="Resizetizer.NT.targets" Pack="True" PackagePath="buildTransitive;build" CopyToOutputDirectory="PreserveNewest" />
-    <None Include="Resizetizer.NT.props" Pack="True" PackagePath="buildTransitive;build" CopyToOutputDirectory="PreserveNewest" />
-    <None Update="Rules\ProjectItemsSchema.xaml" Pack="True" PackagePath="buildTransitive;build" CopyToOutputDirectory="PreserveNewest" />
-    <None Update="Rules\SharedFont.xaml" Pack="True" PackagePath="buildTransitive;build" CopyToOutputDirectory="PreserveNewest" />
-    <None Update="Rules\SharedImage.xaml" Pack="True" PackagePath="buildTransitive;build" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="$(TargetPath)" Visible="False" Pack="True" PackagePath="buildTransitive" />
+    <None Include="@(_ItemToPack)" Visible="False" Pack="True" PackagePath="buildTransitive\%(SubDir)" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="Resizetizer.NT.targets" Pack="True" PackagePath="buildTransitive" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="Resizetizer.NT.props" Pack="True" PackagePath="buildTransitive" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Rules\ProjectItemsSchema.xaml" Pack="True" PackagePath="buildTransitive" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Rules\SharedFont.xaml" Pack="True" PackagePath="buildTransitive" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Rules\SharedImage.xaml" Pack="True" PackagePath="buildTransitive" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
